feat: replace List.of() with Collections.singletonList() and Collections.emptyList() for compatibility